editing the show page

--- a/views/cuisines/show.ejs
+++ b/views/cuisines/show.ejs
@@ -14,7 +14,7 @@
             <div class="thumbnail">
                 <img class="img-responsive" src="<%= cuisine.image %>">
                 <div class="caption-full">
-                    <h4 class="pull-right">$<%= cuisine.cost %>/night</h4>
+                    <h4 class="pull-right">$<%= cuisine.cost %></h4>
                     <h4><a><%=cuisine.name%></a></h4>
                     <p><%= cuisine.description %></p>
                     <p>
